fix small layout bug

--- a/src/globalStyles/scss/index.scss
+++ b/src/globalStyles/scss/index.scss
@@ -108,7 +108,7 @@ body {
     width: $container-width;
     max-width: 100vw;
     margin: 0 auto;
-    padding: 0 0;
+    padding: 0 $spacer;
     text-align: center;
 
     @media (max-width: $medium-screen) {
